# ALMA

./: .gitignore  README.md  eval.py  main.py  pyproject.toml  requirements.txt  run_llmmt.py
configs/: lora.yaml  nllb.yaml
runs/: parallel_ft_lora.sh
utils/: arguments.py  trainer_llmmt.py  utils.py
